# toynet

./: LICENSE  README.md
src/: CMakeLists.txt
src/w2v/: CMakeLists.txt  diff.cpp  diff.h  diff.t.cpp  stlio.h  w2v.cpp  w2v.h  w2v.t.cpp
toynet/: CMakeLists.txt  diff.cpp  diff.h  diff.md  diff.t.cpp  loss.cpp  loss.h  loss.md  loss.t.cpp  math.cpp  math.h  math.t.cpp  stlio.h  ublasconvert.cpp  ublasconvert.h  ublasconvert.t.cpp  ublasio.cpp  ublasio.h  ublasio.t.cpp  ublastest.h  w2v.cpp  w2v.h  w2v.t.cpp
toynet/examples/diff/: diff.cpp  diff.m.cpp  diff.md  diff.t.cpp
toynet/examples/diff2/: diff2.cpp  diff2.h  diff2.m.cpp  diff2.md  diff2.t.cpp
toynet/ublas/: convert.cpp  convert.h  convert.t.cpp  io.cpp  io.h  io.t.cpp  test.h  ublas.h
